edit buttun style

--- a/Form Validator/index.html
+++ b/Form Validator/index.html
@@ -13,12 +13,12 @@
         <h2>Register with us</h2>
         <div class="form-control">
           <label for="username">Username</label>
-          <input type="text" id="username" placeholder="ex.sahwky" />
+          <input type="text" id="username" placeholder="shawky" />
           <small>error massage</small>
         </div>
         <div class="form-control">
           <label for="email">email</label>
-          <input type="text" id="email" placeholder="ex.sahwky@gmail.com" />
+          <input type="text" id="email" placeholder="shawky@gmail.com" />
           <small>error massage</small>
         </div>
         <div class="form-control">
@@ -31,11 +31,16 @@
           <input
             type="password"
             id="password2"
-            placeholder="confirm password"
+            placeholder="rewrite password"
           />
           <small>error massage</small>
         </div>
-        <button>Submit</button>
+        <center>
+          <a href="#">
+            Submit
+            <span></span>
+          </a>
+        </center>
       </form>
     </div>
     <script src="script.js"></script>
