--- a/Form Validator/index.html
+++ b/Form Validator/index.html
@@ -35,12 +35,7 @@
           />
           <small>error massage</small>
         </div>
-        <center>
-          <a href="#">
-            Submit
-            <span></span>
-          </a>
-        </center>
+        <button type="submit">submit</button>
       </form>
     </div>
     <script src="script.js"></script>
