--- a/Cinema Seat Wizard/index.html
+++ b/Cinema Seat Wizard/index.html
@@ -31,9 +31,9 @@
     <div class="container">
       <label for="movie">Choose a movie:</label>
       <select id="movie" name="movie">
-        <option value="12">Game of Thrones</option>
-        <option value="11">The sopranos</option>
-        <option value="10">Breaking Bad</option>
+        <option value="12">Game of Thrones ($12)</option>
+        <option value="11">The sopranos ($11)</option>
+        <option value="10">Breaking Bad ($10)</option>
       </select>
     </div>
 
